* Add code for marines (Adam_J)

* Add code in for kamikaze (Adam_J)

* fix bug located http://maddlinks.com/triplea/index.php?showtopic=707 (Adam Jette)

Changes for 0.7.0

* add movement help to help menu (sgb)

* remove hints menu (sgb)

* movement now done without pop up dialogs  (sgb, lnxduk)

* only allow transports to unload units to 1 territory  (sgb)

* fixed bug [ 1238910 ] PBEM mode cannot accept subdomains  (sgb)

* add "click" to select casualties button, many users are confused and dont know to click to select casualties  (sgb)

* reduce network traffic somewhat by more efficient serialization  (sgb)

* autosave now happens at the end of a turn, after combat move and before non combat  (sgb)

* use annotations to determine when to autosave  (sgb)

* change to jdk 1.5, 1.5 is now required to build and to run  (sgb)

* fix bug where versions like 0.6.0.1 would be displayed as 0.6.1  (sgb)

Changes for 0.6.0.1

* fix bug [ 1225276 ] Aircraft unable to attack or land (sgb)

Changes for 0.6.0

* updated developer docs, incomplete for now (George_H)

* draw a line under overflow units so you can tell what belongs in a territory (sgb)

* fixed bug where you could retreat subs if all your opponents destroyers were destroyed in one round of combat (sgb)

* fixed bug where damaged battleships would not repair while viewing history (sgb)

* fixed small map refresh (whole map goes white) when switching skins (sgb)

* fixed bug where sometimes dice would not show up on the select casualties panel (sgb)

* removed "Heavy Bombers Pick best of X Dice" option from classic and wandering head big world, it didnt work (sgb)

* Fixed bug where transport moves could be undone before moves where the transport had been loaded/unloaded (sgb)

Changes for 0.5.4

* fixed bug where units could blitz through territories with an aa gun if they blitzed in 2 steps (4th edition only) (sgb)

* fixed bug [ 1188411 ] Missing client text (Chat window) 5.2.2 (sgb)
